// Vitest Snapshot v1

exports[`fromArray > transforms a \`ResourceDescription\` array into a hierarchical tree 1`] = `
Entries {
  "entries": [
    {
      "index": null,
      "item": Symbol(same-old-id),
      "name": "entity",
      "subEntries": [
        {
          "index": 0,
          "item": {
            "id": "(09cde0390abe0694,db051b98-6ff5-4bac-bea8-50b5a13c3f1b)",
            "path": "/entity/DebugCube0",
            "version": 1,
          },
          "name": "DebugCube0",
          "subEntries": [],
        },
        {
          "index": 1,
          "item": {
            "id": "(09cde0390abe0694,202e3aa6-f158-4c77-890b-3f59b183b6bd)",
            "path": "/entity/DebugCube1",
            "version": 1,
          },
          "name": "DebugCube1",
          "subEntries": [],
        },
        {
          "index": 2,
          "item": {
            "id": "(09cde0390abe0694,7483c534-fe2a-4f16-b655-e9afe39a93ba)",
            "path": "/entity/DebugCube2",
            "version": 1,
          },
          "name": "DebugCube2",
          "subEntries": [],
        },
        {
          "index": 3,
          "item": {
            "id": "(0bac9261332b6ce8,d8fe06a0-1317-46f5-902b-266b0eae6fa8)",
            "path": "/entity/TEST_ENTITY_NAME.dc",
            "version": 1,
          },
          "name": "TEST_ENTITY_NAME.dc",
          "subEntries": [],
        },
      ],
    },
    {
      "index": null,
      "item": Symbol(same-old-id),
      "name": "image",
      "subEntries": [
        {
          "index": 4,
          "item": {
            "id": "(4976b194d8a1e0c2,8ee3dcef-1aa4-4772-ad9b-28066f06909e)",
            "path": "/image/ground.psd",
            "version": 1,
          },
          "name": "ground.psd",
          "subEntries": [],
        },
      ],
    },
    {
      "index": null,
      "item": Symbol(same-old-id),
      "name": "prefab",
      "subEntries": [
        {
          "index": null,
          "item": Symbol(same-old-id),
          "name": "props",
          "subEntries": [
            {
              "index": 5,
              "item": {
                "id": "(91dc60590cba171e,7d0e930c-eb69-45c4-a695-fcb787f3700f)",
                "path": "/prefab/props/cube_group_cube_1.ent.ins",
                "version": 1,
              },
              "name": "cube_group_cube_1.ent.ins",
              "subEntries": [],
            },
            {
              "index": 6,
              "item": {
                "id": "(91dc60590cba171e,c6db12c5-47a6-407d-94da-b6853f36eb8a)",
                "path": "/prefab/props/cube_group_cube_2.ent.ins",
                "version": 1,
              },
              "name": "cube_group_cube_2.ent.ins",
              "subEntries": [],
            },
            {
              "index": 7,
              "item": {
                "id": "(1c0ff9e497b0740f,45d44b64-b97c-486d-a0d7-151974c28263)",
                "path": "/prefab/props/cube_group.ent",
                "version": 1,
              },
              "name": "cube_group.ent",
              "subEntries": [],
            },
            {
              "index": 8,
              "item": {
                "id": "(1c0ff9e497b0740f,270c28b5-6368-4a21-8ef1-a7d03f85abb3)",
                "path": "/prefab/props/cube.ent",
                "version": 1,
              },
              "name": "cube.ent",
              "subEntries": [],
            },
          ],
        },
      ],
    },
    {
      "index": null,
      "item": Symbol(same-old-id),
      "name": "world",
      "subEntries": [
        {
          "index": null,
          "item": Symbol(same-old-id),
          "name": "sample_1",
          "subEntries": [
            {
              "index": 9,
              "item": {
                "id": "(91dc60590cba171e,7d083d64-cbf9-4786-ae8b-44924b3e2035)",
                "path": "/world/sample_1/cube_1.ent.ins",
                "version": 1,
              },
              "name": "cube_1.ent.ins",
              "subEntries": [],
            },
            {
              "index": 10,
              "item": {
                "id": "(91dc60590cba171e,ee30f104-3ef5-46e7-af16-4f085bd6f8e3)",
                "path": "/world/sample_1/cube_2.ent.ins",
                "version": 1,
              },
              "name": "cube_2.ent.ins",
              "subEntries": [],
            },
            {
              "index": 11,
              "item": {
                "id": "(91dc60590cba171e,4f595c8b-3b9a-41d6-9cf6-a7557dd2e8ee)",
                "path": "/world/sample_1/cube_3.ent.ins",
                "version": 1,
              },
              "name": "cube_3.ent.ins",
              "subEntries": [],
            },
            {
              "index": 12,
              "item": {
                "id": "(91dc60590cba171e,181f9358-000f-47db-9583-7c9448c3dba8)",
                "path": "/world/sample_1/cube_group_1.ent.ins",
                "version": 1,
              },
              "name": "cube_group_1.ent.ins",
              "subEntries": [],
            },
            {
              "index": 13,
              "item": {
                "id": "(1c0ff9e497b0740f,e07c7027-a823-47e5-b0dd-8871e27adfce)",
                "path": "/world/sample_1/ground.ent",
                "version": 1,
              },
              "name": "ground.ent",
              "subEntries": [],
            },
            {
              "index": 14,
              "item": {
                "id": "(07dd9f5d1793ed64,48909c46-ad4f-4d6b-a522-2e16e81ba082)",
                "path": "/world/sample_1/ground.mat",
                "version": 1,
              },
              "name": "ground.mat",
              "subEntries": [],
            },
            {
              "index": 15,
              "item": {
                "id": "(80b97dd7e2e9edca,7948dc8c-8bc6-4aaf-b3cf-0a21633edc44)",
                "path": "/world/sample_1/ground.mesh",
                "version": 1,
              },
              "name": "ground.mesh",
              "subEntries": [],
            },
          ],
        },
        {
          "index": 16,
          "item": {
            "id": "(1c0ff9e497b0740f,5d6c8521-ef7f-4402-8fac-01c5c4f53329)",
            "path": "/world/sample_1.ent",
            "version": 1,
          },
          "name": "sample_1.ent",
          "subEntries": [],
        },
      ],
    },
  ],
}
`;

exports[`updateEntry > updates 1 entry name "leaf" when the provided function returns a non empty string for a "leaf" entry 1`] = `
Entries {
  "entries": [
    {
      "index": null,
      "item": Symbol(same-old-id),
      "name": "entity",
      "subEntries": [
        {
          "index": 0,
          "item": {
            "id": "(09cde0390abe0694,db051b98-6ff5-4bac-bea8-50b5a13c3f1b)",
            "path": "/entity/DebugCube0",
            "version": 1,
          },
          "name": "DebugCube0",
          "subEntries": [],
        },
        {
          "index": 1,
          "item": {
            "id": "(09cde0390abe0694,202e3aa6-f158-4c77-890b-3f59b183b6bd)",
            "path": "/entity/DebugCube1",
            "version": 1,
          },
          "name": "DebugCube1",
          "subEntries": [],
        },
        {
          "index": 2,
          "item": {
            "id": "(09cde0390abe0694,7483c534-fe2a-4f16-b655-e9afe39a93ba)",
            "path": "/entity/DebugCube2",
            "version": 1,
          },
          "name": "DebugCube2",
          "subEntries": [],
        },
        {
          "index": 3,
          "item": {
            "id": "(0bac9261332b6ce8,d8fe06a0-1317-46f5-902b-266b0eae6fa8)",
            "path": "/entity/TEST_ENTITY_NAME.dc",
            "version": 1,
          },
          "name": "TEST_ENTITY_NAME.dc",
          "subEntries": [],
        },
      ],
    },
    {
      "index": null,
      "item": Symbol(same-old-id),
      "name": "image",
      "subEntries": [
        {
          "index": 4,
          "item": {
            "id": "(4976b194d8a1e0c2,8ee3dcef-1aa4-4772-ad9b-28066f06909e)",
            "path": "/image/ground.psd",
            "version": 1,
          },
          "name": "ground.psd",
          "subEntries": [],
        },
      ],
    },
    {
      "index": null,
      "item": Symbol(same-old-id),
      "name": "prefab",
      "subEntries": [
        {
          "index": null,
          "item": Symbol(same-old-id),
          "name": "props",
          "subEntries": [
            {
              "index": 5,
              "item": {
                "id": "(91dc60590cba171e,7d0e930c-eb69-45c4-a695-fcb787f3700f)",
                "path": "/prefab/props/cube_group_cube_1.ent.ins",
                "version": 1,
              },
              "name": "cube_group_cube_1.ent.ins",
              "subEntries": [],
            },
            {
              "index": 6,
              "item": {
                "id": "(91dc60590cba171e,c6db12c5-47a6-407d-94da-b6853f36eb8a)",
                "path": "/prefab/props/cube_group_cube_2.ent.ins",
                "version": 1,
              },
              "name": "cube_group_cube_2.ent.ins",
              "subEntries": [],
            },
            {
              "index": 7,
              "item": {
                "id": "(1c0ff9e497b0740f,270c28b5-6368-4a21-8ef1-a7d03f85abb3)",
                "path": "/prefab/props/cube.ent",
                "version": 1,
              },
              "name": "cube.ent",
              "subEntries": [],
            },
            {
              "index": 8,
              "item": {
                "id": "(1c0ff9e497b0740f,45d44b64-b97c-486d-a0d7-151974c28263)",
                "path": "/prefab/props/cube_group.ent",
                "version": 1,
              },
              "name": "new_cube_group.ent",
              "subEntries": [],
            },
          ],
        },
      ],
    },
    {
      "index": null,
      "item": Symbol(same-old-id),
      "name": "world",
      "subEntries": [
        {
          "index": null,
          "item": Symbol(same-old-id),
          "name": "sample_1",
          "subEntries": [
            {
              "index": 9,
              "item": {
                "id": "(91dc60590cba171e,7d083d64-cbf9-4786-ae8b-44924b3e2035)",
                "path": "/world/sample_1/cube_1.ent.ins",
                "version": 1,
              },
              "name": "cube_1.ent.ins",
              "subEntries": [],
            },
            {
              "index": 10,
              "item": {
                "id": "(91dc60590cba171e,ee30f104-3ef5-46e7-af16-4f085bd6f8e3)",
                "path": "/world/sample_1/cube_2.ent.ins",
                "version": 1,
              },
              "name": "cube_2.ent.ins",
              "subEntries": [],
            },
            {
              "index": 11,
              "item": {
                "id": "(91dc60590cba171e,4f595c8b-3b9a-41d6-9cf6-a7557dd2e8ee)",
                "path": "/world/sample_1/cube_3.ent.ins",
                "version": 1,
              },
              "name": "cube_3.ent.ins",
              "subEntries": [],
            },
            {
              "index": 12,
              "item": {
                "id": "(91dc60590cba171e,181f9358-000f-47db-9583-7c9448c3dba8)",
                "path": "/world/sample_1/cube_group_1.ent.ins",
                "version": 1,
              },
              "name": "cube_group_1.ent.ins",
              "subEntries": [],
            },
            {
              "index": 13,
              "item": {
                "id": "(1c0ff9e497b0740f,e07c7027-a823-47e5-b0dd-8871e27adfce)",
                "path": "/world/sample_1/ground.ent",
                "version": 1,
              },
              "name": "ground.ent",
              "subEntries": [],
            },
            {
              "index": 14,
              "item": {
                "id": "(07dd9f5d1793ed64,48909c46-ad4f-4d6b-a522-2e16e81ba082)",
                "path": "/world/sample_1/ground.mat",
                "version": 1,
              },
              "name": "ground.mat",
              "subEntries": [],
            },
            {
              "index": 15,
              "item": {
                "id": "(80b97dd7e2e9edca,7948dc8c-8bc6-4aaf-b3cf-0a21633edc44)",
                "path": "/world/sample_1/ground.mesh",
                "version": 1,
              },
              "name": "ground.mesh",
              "subEntries": [],
            },
          ],
        },
        {
          "index": 16,
          "item": {
            "id": "(1c0ff9e497b0740f,5d6c8521-ef7f-4402-8fac-01c5c4f53329)",
            "path": "/world/sample_1.ent",
            "version": 1,
          },
          "name": "sample_1.ent",
          "subEntries": [],
        },
      ],
    },
  ],
}
`;

exports[`updateEntry > updates 1 entry name "node" when the provided function returns a non empty string for a "node" entry 1`] = `
Entries {
  "entries": [
    {
      "index": null,
      "item": Symbol(same-old-id),
      "name": "entity",
      "subEntries": [
        {
          "index": 0,
          "item": {
            "id": "(09cde0390abe0694,db051b98-6ff5-4bac-bea8-50b5a13c3f1b)",
            "path": "/entity/DebugCube0",
            "version": 1,
          },
          "name": "DebugCube0",
          "subEntries": [],
        },
        {
          "index": 1,
          "item": {
            "id": "(09cde0390abe0694,202e3aa6-f158-4c77-890b-3f59b183b6bd)",
            "path": "/entity/DebugCube1",
            "version": 1,
          },
          "name": "DebugCube1",
          "subEntries": [],
        },
        {
          "index": 2,
          "item": {
            "id": "(09cde0390abe0694,7483c534-fe2a-4f16-b655-e9afe39a93ba)",
            "path": "/entity/DebugCube2",
            "version": 1,
          },
          "name": "DebugCube2",
          "subEntries": [],
        },
        {
          "index": 3,
          "item": {
            "id": "(0bac9261332b6ce8,d8fe06a0-1317-46f5-902b-266b0eae6fa8)",
            "path": "/entity/TEST_ENTITY_NAME.dc",
            "version": 1,
          },
          "name": "TEST_ENTITY_NAME.dc",
          "subEntries": [],
        },
      ],
    },
    {
      "index": null,
      "item": Symbol(same-old-id),
      "name": "image",
      "subEntries": [
        {
          "index": 4,
          "item": {
            "id": "(4976b194d8a1e0c2,8ee3dcef-1aa4-4772-ad9b-28066f06909e)",
            "path": "/image/ground.psd",
            "version": 1,
          },
          "name": "ground.psd",
          "subEntries": [],
        },
      ],
    },
    {
      "index": null,
      "item": Symbol(same-old-id),
      "name": "monde",
      "subEntries": [
        {
          "index": null,
          "item": Symbol(same-old-id),
          "name": "sample_1",
          "subEntries": [
            {
              "index": 5,
              "item": {
                "id": "(91dc60590cba171e,7d083d64-cbf9-4786-ae8b-44924b3e2035)",
                "path": "/world/sample_1/cube_1.ent.ins",
                "version": 1,
              },
              "name": "cube_1.ent.ins",
              "subEntries": [],
            },
            {
              "index": 6,
              "item": {
                "id": "(91dc60590cba171e,ee30f104-3ef5-46e7-af16-4f085bd6f8e3)",
                "path": "/world/sample_1/cube_2.ent.ins",
                "version": 1,
              },
              "name": "cube_2.ent.ins",
              "subEntries": [],
            },
            {
              "index": 7,
              "item": {
                "id": "(91dc60590cba171e,4f595c8b-3b9a-41d6-9cf6-a7557dd2e8ee)",
                "path": "/world/sample_1/cube_3.ent.ins",
                "version": 1,
              },
              "name": "cube_3.ent.ins",
              "subEntries": [],
            },
            {
              "index": 8,
              "item": {
                "id": "(91dc60590cba171e,181f9358-000f-47db-9583-7c9448c3dba8)",
                "path": "/world/sample_1/cube_group_1.ent.ins",
                "version": 1,
              },
              "name": "cube_group_1.ent.ins",
              "subEntries": [],
            },
            {
              "index": 9,
              "item": {
                "id": "(1c0ff9e497b0740f,e07c7027-a823-47e5-b0dd-8871e27adfce)",
                "path": "/world/sample_1/ground.ent",
                "version": 1,
              },
              "name": "ground.ent",
              "subEntries": [],
            },
            {
              "index": 10,
              "item": {
                "id": "(07dd9f5d1793ed64,48909c46-ad4f-4d6b-a522-2e16e81ba082)",
                "path": "/world/sample_1/ground.mat",
                "version": 1,
              },
              "name": "ground.mat",
              "subEntries": [],
            },
            {
              "index": 11,
              "item": {
                "id": "(80b97dd7e2e9edca,7948dc8c-8bc6-4aaf-b3cf-0a21633edc44)",
                "path": "/world/sample_1/ground.mesh",
                "version": 1,
              },
              "name": "ground.mesh",
              "subEntries": [],
            },
          ],
        },
        {
          "index": 12,
          "item": {
            "id": "(1c0ff9e497b0740f,5d6c8521-ef7f-4402-8fac-01c5c4f53329)",
            "path": "/world/sample_1.ent",
            "version": 1,
          },
          "name": "sample_1.ent",
          "subEntries": [],
        },
      ],
    },
    {
      "index": null,
      "item": Symbol(same-old-id),
      "name": "prefab",
      "subEntries": [
        {
          "index": null,
          "item": Symbol(same-old-id),
          "name": "props",
          "subEntries": [
            {
              "index": 13,
              "item": {
                "id": "(91dc60590cba171e,7d0e930c-eb69-45c4-a695-fcb787f3700f)",
                "path": "/prefab/props/cube_group_cube_1.ent.ins",
                "version": 1,
              },
              "name": "cube_group_cube_1.ent.ins",
              "subEntries": [],
            },
            {
              "index": 14,
              "item": {
                "id": "(91dc60590cba171e,c6db12c5-47a6-407d-94da-b6853f36eb8a)",
                "path": "/prefab/props/cube_group_cube_2.ent.ins",
                "version": 1,
              },
              "name": "cube_group_cube_2.ent.ins",
              "subEntries": [],
            },
            {
              "index": 15,
              "item": {
                "id": "(1c0ff9e497b0740f,45d44b64-b97c-486d-a0d7-151974c28263)",
                "path": "/prefab/props/cube_group.ent",
                "version": 1,
              },
              "name": "cube_group.ent",
              "subEntries": [],
            },
            {
              "index": 16,
              "item": {
                "id": "(1c0ff9e497b0740f,270c28b5-6368-4a21-8ef1-a7d03f85abb3)",
                "path": "/prefab/props/cube.ent",
                "version": 1,
              },
              "name": "cube.ent",
              "subEntries": [],
            },
          ],
        },
      ],
    },
  ],
}
`;
